<resources>
    <string name="app_name">Learn City</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="search_tutors_string">SEARCH TUTORS</string>

    <string name="search_by_subject_label">Subject</string>
    <string name="search_by_qualification_label">Type of Tutor</string>
    <string name="search_by_location_label">Location</string>

    <!--NEW ACCOUNT CREATION ACTIVITY LABELS-->
    <string name="account_person_name_label">Name</string>
    <string name="account_person_emailId_label">Email ID</string>
    <string name="account_person_phoneNo_label">Phone No</string>
    <string name="account_person_password_label">Password</string>
    <string name="account_person_retypePassword_label">Retype Password</string>
    <string name="learner_tutor_status_label">I am here to...</string>
    <string-array name="learner_tutor_status">
        <item>Learn</item>
        <item>Teach</item>
    </string-array>


    <string name="create_account_string"> Create Account</string>

    <!--ADDITIONAL INFO. FOR TUTOR ACCOUNT CREATION -->
    <string name="educational_qualification_label">Educational Qualification</string>
    <string name="high_school_qualification_label">10th Standard</string>
    <string name="senior_secondary_qualification_label"> 12th Standard</string>
    <string name="year_of_passing_label">Year of Passing</string>
    <string name="institution_label">Institution</string>
    <string name="duration_label">Duration</string>

    <string name="occupation_label">Current Occupation</string>
    <string name="organization_label"> Organization</string>
    <string name="designation_label">Designation</string>
    <string name="experience_label">Experience</string>


    <!--TYPE OF TUTOR-->
    <string-array name="type_of_tutor">
        <item>College/University Professor</item>
        <item>College/University Undergraduate</item>
        <item>College/University Alumni/Graduate</item>
        <item>IIT Undergraduate</item>
        <item>IIT Alumni/Graduate</item>
        <item>IIT Professor</item>
        <item>IIM Undergraduate</item>
        <item>IIM Alumni/Graduate</item>
        <item>IIM Professor</item>
        <item>NIT Undergraduate</item>
        <item>NIT Alumni/Graduate</item>
        <item>NIT Professor</item>
        <item>Primary School Teacher</item>
        <item>High School Teacher</item>
        <item>Senior Secondary Teacher</item>
        <item>Corporate Professional</item>
        <item>Coaching Institute Teacher</item>
        <item>Freelancer/Professional Tutor</item>
    </string-array>

    <!--LIST OF DISCIPLINES-->
    <string-array name="list_of_disciplines">
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Mathematics</item>
        <item>Computer Science</item>
        <item>Biology</item>
        <item>Sanskrit</item>
        <item>Physical Education</item>
        <item>Social Science</item>
        <item>Economics</item>
        <item>Humanities</item>
        <item>Arts</item>
        <item>English</item>
        <item>History</item>
        <item>Political Science</item>
        <item>Hindi</item>
        <item>French</item>
        <item>German</item>
        <item>Japanese</item>
    </string-array>

</resources>
