<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/educational_qualification_label"/>
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="200dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--What follows encapsulates the High School Educational Qualification -->
                <!--First comes the name. I have chosen to display it statically for High School rather then pick from a list-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high_school_qualification_label"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/institution_label"/>
                        <EditText
                            android:id="@+id/institution_high_school"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/duration_label"/>
                        <EditText
                            android:id="@+id/years_high_school"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="Yrs." />
                        <EditText
                            android:id="@+id/months_high_school"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="Months." />
                        <EditText
                            android:id="@+id/days_high_school"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="Days" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/year_of_passing_label"/>
                        <!--Although its an EditText, it could be something like picking days from a CalenderPicker-->
                        <EditText
                            android:id="@+id/year_of_passing_high_school"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <!--What follows encapsulates the Senior Secondary Educational Qualification -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/senior_secondary_qualification_label"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/institution_label"/>
                            <EditText
                                android:id="@+id/institution_senior_sec"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/duration_label"/>
                            <EditText
                                android:id="@+id/years_senior_sec"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="Yrs." />
                            <EditText
                                android:id="@+id/months_senior_sec"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="Months." />
                            <EditText
                                android:id="@+id/days_senior_sec"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="Days" />
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/year_of_passing_label"/>
                            <!--Although its an EditText, it could be something like picking days from a CalenderPicker-->
                            <EditText
                                android:id="@+id/year_of_passing_senior_sec"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <Button
                            android:id="@+id/add_more_qualification_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/drawable_add_new_qualification"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

        <!--Now, Occupation will be asked -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/occupation_label"/>
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/organization_label"/>
                    <EditText
                        android:id="@+id/occupation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/designation_label"/>
                    <com.learncity.tutor.account.create.DesignationMultiAutoCompleteTextView
                        android:id="@+id/designation_multi_auto_complete_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:completionThreshold="1"
                        android:ems="10"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/experience_label"/>
                    <!--Although its an EditText, it could be something like picking days from a CalenderPicker-->
                    <EditText
                        android:id="@+id/years_occupation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="Yrs." />
                    <EditText
                        android:id="@+id/months_occupation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="Months." />
                    <EditText
                        android:id="@+id/days_occupation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="Days" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <!--Having a RelativeLayout doesn't have any point here.
    TODO: Refactor the RelativeLayout below(I guess remove/replace it)-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!-- Floating Skip Button-->
        <Button
            android:id="@+id/skip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SKIP"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>
        <!--Account Create Button-->
        <Button
            android:id="@+id/create_account_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NEXT"/>
    </RelativeLayout>


</FrameLayout>
